--- a/HTML5&CSS3/project3/index.html
+++ b/HTML5&CSS3/project3/index.html
@@ -11,18 +11,18 @@
         <!--左栏布局-->
         <div class="team_info">
             <dl>
-                <dd ><img class="team_logo" src="../rock.jpg" alt="团队logo"></dd>
+                <dd ><img class="team_logo" src="rock.jpg" alt="团队logo"></dd>
                 <span>We are the world</span>
             </dl>
         </div>
 
         <!--右栏布局-->
         <ul class="member_logo">
-            <li><img src="../rock.jpg" alt="member 1"></li>
-            <li><img src="../rock.jpg" alt="member 2"></li>
-            <li><img src="../rock.jpg" alt="member 3"></li>
-            <li><img src="../rock.jpg" alt="member 4"></li>
-            <li><img src="../rock.jpg" alt="member 5"></li>
+            <li><img src="rock.jpg" alt="member 1"></li>
+            <li><img src="rock.jpg" alt="member 2"></li>
+            <li><img src="rock.jpg" alt="member 3"></li>
+            <li><img src="rock.jpg" alt="member 4"></li>
+            <li><img src="rock.jpg" alt="member 5"></li>
         </ul>
 
         <!--中栏布局-->
@@ -35,14 +35,6 @@
                 <li>2013年姓名：陈伟钰等级： 0级事件：初入深圳大学新手村。2014年等级： 10级事件：选择职业——集成电路。2016年等级： 0级事件：心血来潮，走火入魔，自废一身修为，删号重来。</li>
             </ul>
         </div>
-
-
-
-
-
-
-
-
     </div>
 </body>
 </html>
